--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -9,95 +9,212 @@
   padding: 0.2em 0;
 }
 
-/* Space out content a bit */
+// Bootstrap Cover Component
+/* Links */
+a,
+a:focus,
+a:hover {
+  color: #fff;
+}
+
+/* Custom default button */
+// .btn-secondary,
+// .btn-secondary:hover,
+// .btn-secondary:focus {
+//   color: #333;
+//   text-shadow: none; /* Prevent inheritance from `body` */
+//   background-color: #fff;
+//   border: .05rem solid #fff;
+// }
+
+
+/*
+ * Base structure
+ */
+
+html,
 body {
-  padding-top: 1.5rem;
-  padding-bottom: 1.5rem;
-}
-
-/* Everything but the jumbotron gets side spacing for mobile first views */
-.header,
-.marketing,
-.footer {
-  padding-right: 1rem;
-  padding-left: 1rem;
-}
-
-/* Custom page header */
-.header {
-  padding-bottom: 1rem;
-  border-bottom: .05rem solid #e5e5e5;
-}
-
-/* Make the masthead heading the same height as the navigation */
-.header h3 {
-  margin-top: 0;
-  margin-bottom: 0;
-  line-height: 3rem;
-}
-
-/* Custom page footer */
-.footer {
-  padding-top: 1.5rem;
-  color: #777;
-  border-top: .05rem solid #e5e5e5;
-}
-
-/* Customize container */
-@media (min-width: 48em) {
-  .container {
-    max-width: 46rem;
-  }
-}
-.container-narrow > hr {
-  margin: 2rem 0;
-}
-
-/* Main marketing message and sign up button */
-.jumbotron {
   text-align: center;
-  border-bottom: .05rem solid #e5e5e5;
-}
-.jumbotron .btn {
-  padding: .75rem 1.5rem;
-  font-size: 1.5rem;
+  height: 100%;
+  background: linear-gradient(to right, rgb(97, 67, 133), rgb(81, 99, 149));
 }
 
-/* Supporting marketing content */
-.marketing {
-  margin: 3rem 0;
+/* Extra markup and styles for table-esque vertical and horizontal centering */
+.site-wrapper {
+  display: table;
+  width: 100%;
+  height: 100%; /* For at least Firefox */
+  min-height: 100%;
+  -webkit-box-shadow: inset 0 0 5rem rgba(0,0,0,.5);
+          box-shadow: inset 0 0 5rem rgba(0,0,0,.5);
 }
-.marketing p + h4 {
-  margin-top: 1.5rem;
+.site-wrapper-inner {
+  display: table-cell;
+  vertical-align: top;
+  padding-bottom: 100px;
 }
-
-/* Responsive: Portrait tablets and up */
-@media screen and (min-width: 48em) {
-  /* Remove the padding we set earlier */
-  .header,
-  .marketing,
-  .footer {
-    padding-right: 0;
-    padding-left: 0;
-  }
-  /* Space out the masthead */
-  .header {
-    margin-bottom: 2rem;
-  }
-  /* Remove the bottom border on the jumbotron for visual effect */
-  .jumbotron {
-    border-bottom: 0;
-  }
+.app-container {
+  margin-right: auto;
+  margin-left: auto;
 }
 
+/* Padding for spacing */
+.inner {
+  padding: 2rem;
+}
+
+
+/*
+ * Header
+ */
+
+.masthead {
+  margin-bottom: 2rem;
+  text-shadow: 0 .05rem .1rem rgba(0,0,0,.5);
+}
+
+.masthead-brand {
+  margin-bottom: 0;
+  color: #fff;
+}
+
+.nav-masthead .nav-link {
+  padding: .25rem 0;
+  font-weight: bold;
+  color: rgba(255,255,255,.5);
+  background-color: transparent;
+  border-bottom: .25rem solid transparent;
+}
+
+.nav-masthead .nav-link:hover,
+.nav-masthead .nav-link:focus {
+  border-bottom-color: rgba(255,255,255,.25);
+}
+
+.nav-masthead .nav-link + .nav-link {
+  margin-left: 1rem;
+}
+
+.nav-masthead .active {
+  color: #fff;
+  border-bottom-color: #fff;
+}
+
+@media (min-width: 48em) {
+  .masthead-brand {
+    float: left;
+  }
+  .nav-masthead {
+    float: right;
+  }
+}
+
+
+/*
+ * Cover
+ */
+
+.cover {
+  padding: 0 1.5rem;
+}
+.cover {
+  padding: .75rem 1.25rem;
+}
+
+.btn-lg {
+  padding: .4rem 2rem;
+  font-weight: bold;
+}
+
+
+/*
+ * Footer
+ */
+
+.mastfoot {
+  color: rgba(255,255,255,.8);
+  margin: 0 auto;
+}
+
+.display-none {
+  display: none;
+}
+
+
+/*
+ * Affix and center
+ */
+
+@media (min-width: 40em) {
+  /* Pull out the header and footer */
+  .masthead {
+    position: fixed;
+    top: 0;
+  }
+  .mastfoot {
+    position: fixed;
+    bottom: 0;
+  }
+  /* Start the vertical centering */
+  .site-wrapper-inner {
+    vertical-align: middle;
+  }
+  /* Handle the widths */
+  .masthead,
+  .mastfoot,
+  .app-container {
+    width: 100%; /* Must be percentage or pixels for horizontal alignment */
+  }
+}
+
+@media (min-width: 62em) {
+  .masthead,
+  .mastfoot,
+  .app-container {
+    width: 54rem;
+  }
+}
+
+// Options
+.options {
+  width: max-content;
+  margin: 0 auto;
+  color: black;
+  padding: 20px 50px;
+  background-color: rgba(255, 255, 255, .75);
+  border-radius: 15px;
+}
+
+.options h2 {
+  font-size: 1.3rem;
+}
+
+.align-left {
+  text-align: left;
+}
+
+// Minesweeper
 .clear-left {
   clear: left;
 }
 
-#gridWrapper {
-  text-align: center;
+#indicators {
+  list-style: none;
 }
-#testMinesweeper {
+#indicators li{
+  display: inline-block;
+  margin-left: 10px;
+}
+
+#minesweeperApp {
+  color: #fff;
+  text-align: center;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none; 
+  cursor: default;
+}
+#gameBoard {
   overflow: auto;
   display: inline-block;
 }
@@ -105,7 +222,88 @@ body {
   float: left;
   width: 25px;
   height: 25px;
+  margin-left: 3px; 
+  margin-bottom: 3px; 
   text-align: center;
-  background-color: #999;
-  border: 1px solid #000;
+  color: black;
+  background-color: #efefef;
+  // border: 1px solid #000;
+}
+
+.opened {
+  background-color:  rgba(255, 255, 255, 0.5);
+  transition: background-color 0.5s;
+}
+
+.bomb {
+  color: red;
+}
+.flag {
+  // color: red;
+}
+
+.hint {
+  animation: blinker 1s linear 2s;
+}
+
+.hint {
+  animation: pulse 5s normal;
+}
+
+@keyframes pulse {
+  0% {
+    background-color: #001F3F;
+  }
+  100% {
+    background-color: #fff;
+  }
+}
+
+.modal-title {
+  color: black
+}
+
+.modal-body {
+  color: black;
+}
+
+.custom-options {
+  text-align: left;
+  margin-top: 20px; 
+}
+
+.custom-options h3 {
+  font-size: 1.2rem;
+}
+
+.input-group {
+  padding: 5px 0;
+  width: 300px;
+  margin: 10px auto;
+}
+
+#createGame {
+  margin-top: 20px;
+}
+
+.hidden {
+  display: none;
+}
+
+.options-footer {
+  text-align: center;
+}
+
+.table {
+  width: 80%;
+  margin: 0 auto;
+  text-align: left;
+  background-color: rgba(255, 255, 255, 0.1);
+  color: white;
+}
+
+.scoreboard h1 {
+  color: white;
+  font-size: 1.6rem;
+  padding-bottom: 20px;
 }
